[package]
name = "shrek_superslam"
version = "0.1.0"
authors = ["alex <kirby@cpan.org>"]
edition = "2018"

[[bin]]
name = "shreksuperslam-classes"
path = "src/bin/classes/main.rs"

[[bin]]
name = "shreksuperslam-extract"
path = "src/bin/extract/main.rs"

[[bin]]
name = "shreksuperslam-modify-attacks"
path = "src/bin/modify_attacks/main.rs"

[[bin]]
name = "shreksuperslam-repackage"
path = "src/bin/repackage/main.rs"

[dependencies]
byteorder = "1.3.2"
crossbeam = "0.6.0"
getopts = "0.2.21"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
num_cpus = "1.13.0"
walkdir = "2"